refactor: 계산 로직 내부 호출에 따른 기존 검증 메소드 제거